API set up and DB connection set up
